# viva-engine

./: CMakeLists.txt  LICENSE  README.md  conanfile.py
builtin/shaders/default_lit/: default_lit.frag.glsl  default_lit.vert.glsl
builtin/shaders/default_unlit/: default_unlit.frag.glsl  default_unlit.vert.glsl
builtin/shaders/simple_color/: simple_color.frag.glsl  simple_color.vert.glsl
builtin/shaders/simple_texture/: simple_texture.frag.glsl  simple_texture.vert.glsl
include/viva/application/: application.h
include/viva/camera/: camera.h
include/viva/glad/: glad.h
include/viva/material/: material.h
include/viva/mesh/: mesh.h  objmesh.h
include/viva/object/: object.h  render_object.h
include/viva/scene/: scene.h
include/viva/utils/: color.h  transform.h  types.h
src/c++/application/: application.cc
src/c++/camera/: camera.cc
src/c++/glad/: glad.cc
src/c++/material/: material.cc
src/c++/mesh/: mesh.cc  objmesh.cc
src/c++/object/: object.cc  render_object.cc
src/c++/scene/: scene.cc
src/c++/utils/: color.cc
standalone/: CMakeLists.txt  cube.cc  cube.h  main.cc
